--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 				<div id="text-secc">
 
 					<div class="texto-secc">
-						<p>El Dr. Meerloo fue un psiquiatra que experimento los métodos de tortura mental aplicados por los nazis, luego de huir, tuvo se dedicó a observar y estudiar los métodos coercitivos en traidores y sobrevivientes de los regímenes totalitarios. Su libro es producto de todas sus experiencias, en él plantea un análisis de los métodos del control y el lavado del cerebro, no solo dentro de los regímenes, sino también en la sociedad en general donde las nuevas tecnologías y la comunicación en masa pueden ser usadas como herramientas de manipulación y adoctrinamiento masivo.</p>		        
+						<p>El Dr. Meerloo fue un psiquiatra que experimento los métodos de tortura mental aplicados por los nazis, luego de huir, se dedicó a observar y estudiar los métodos coercitivos en traidores y sobrevivientes de los regímenes totalitarios. Su libro es producto de todas sus experiencias, en él plantea un análisis de los métodos del control y el lavado del cerebro, no solo dentro de los regímenes, sino también en la sociedad en general donde las nuevas tecnologías y la comunicación en masa pueden ser usadas como herramientas de manipulación y adoctrinamiento masivo.</p>		        
 					</div>
 					
 					<div class="texto-secc">
